@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+8/20/22: Prevented CreateProcess command from being named CreateProcessA
+(in 4.0).
+
 8/19/22: SEM_4-0-10
 8/19/22: Fix DM crash with GMS 3.5 after taking ~1 million frames (In 4.0).
 
